*1.2.1

* changed way to include render_*-helper_methods into view (including them into Controller and declaring them as helper_methods instead of adding whole module as Helper). this seems to be more reliable under certain conditions. Credits to Gernot Kogler.

*1.2.0

* added capability to add conditions to navigation-items (primary.item key, name, url, :if => Proc.new {current_user.admin?})

*1.1.2

* Bugfix: config now gets evaluated on every render_navigation call. Credits to Joël Azémar.
* Config file gets reloaded on every render_navigation call in development mode. Only load config file on server start in production mode.


*1.1.1

* Change plugin into a GemPlugin