@@ -2,11 +2,12 @@ module SimpleNavigation
   
   # Represents an item in your navigation. Gets generated by the item method in the config-file.
   class Item
-    attr_reader :key, :name, :url, :sub_navigation
+    attr_reader :key, :name, :url, :sub_navigation, :method
     
     # see ItemContainer#item
     def initialize(key, name, url, html_options, sub_nav_block)
       @key = key
+      @method = html_options.delete(:method)
       @name = name
       @url = url
       @html_options = html_options
